# Data-Dashboard

./: .gitignore  1-csv-to-sql.py  1_csv_to_sql.py  2_insert_data.py  3_read_table_data.py  4_delete_data.py  5_delete_table.py  README.md  connection_handler.py  pyproject.toml
